solved some challenges

--- a/python_tutorial/1. hello_world.ipynb
+++ b/python_tutorial/1. hello_world.ipynb
@@ -23,6 +23,44 @@
    "source": [
     "print(\"hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    res = \"\"\n",
+    "    for i in range(1, n+1):\n",
+    "        res += \"%d\" %i\n",
+    "    print(res)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-22T07:53:16.513964Z",
+     "start_time": "2024-03-22T07:53:14.140368Z"
+    }
+   },
+   "id": "f1c1ec431299207f",
+   "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6846b3ad62eb76fa"
   }
  ],
  "metadata": {
